# dragonwizard

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  architecture.md  implementation.md  main.py  pyproject.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
dragonwizard/: __init__.py  __main__.py
dragonwizard/bot/: __init__.py  client.py
dragonwizard/bot/cogs/: dice.py  rules.py
dragonwizard/config/: __init__.py  logging.py  settings.py
dragonwizard/llm/: __init__.py  models.py  orchestrator.py
dragonwizard/prompts/: system.txt
dragonwizard/rag/: __init__.py  base.py  chunking.py  components.py  embeddings.py  engine.py  pipeline.py  vector_store.py
dragonwizard/rag/loaders/: __init__.py  markdown_loader.py  pdf_loader.py
dragonwizard/rag/sources/: __init__.py
dragonwizard/tools/: __init__.py  base.py  dice_roller.py
tests/: __init__.py
tests/fixtures/sample_documents/: sample_readme.md  sample_rules.txt
tests/integration/llm/: test_llm_integration.py
tests/integration/rag/: test_rag_integration.py
tests/integration/tools/: test_dice_roller_integration.py
tests/manual/rag/: eval_chunking.py  eval_embedding_model.py  eval_loaders.py  eval_pdf_strategies.py
tests/manual/tools/: test_dice_server.py
tests/unit/: test_cli_compare.py  test_cli_ingest_flags.py
tests/unit/bot/: test_client.py  test_dice_cog.py  test_rules_cog.py
tests/unit/llm/: test_orchestrator.py
tests/unit/rag/: test_base_models.py  test_chunking.py  test_embeddings.py  test_loaders.py  test_noop_enricher.py  test_pipeline.py  (+2 more)
(+15 files in other folders)
