[project]
name = "dragonwizard"
version = "0.1.0"
description = "LLM-powered Discord bot for D&D 5th edition rules assistance"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
dragonwizard = "dragonwizard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
